SAK-14106
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@51553 66ffb92e-73f9-0310-93c1-f5514f145a0a