@@ -490,7 +490,7 @@ public class ItemAddListener
      	}
       }
       item.setScore(new Float(bean.getItemScore()));
-      item.setDiscount(new Float(bean.getItemDiscount()));
+      item.setDiscount(Float.valueOf(bean.getItemDiscount()));
       item.setHint("");
 
       item.setStatus(ItemDataIfc.ACTIVE_STATUS);
@@ -780,7 +780,7 @@ public class ItemAddListener
 							.getMatch()), answerbean.getSequence(), AnswerBean
 							.getChoiceLabels()[answerbean.getSequence()
 							.intValue() - 1], Boolean.TRUE, null, new Float(
-							bean.getItemScore()), new Float(bean.getItemDiscount()));
+							bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 
 					// only add feedback for correct pairs
 					HashSet answerFeedbackSet = new HashSet();
@@ -797,7 +797,7 @@ public class ItemAddListener
 							.getMatch()), answerbean.getSequence(), AnswerBean
 							.getChoiceLabels()[answerbean.getSequence()
 							.intValue() - 1], Boolean.FALSE, null, new Float(
-							bean.getItemScore()), new Float(bean.getItemDiscount()));
+							bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 				}
 
 				// record answers for all combination of pairs
@@ -858,11 +858,11 @@ public class ItemAddListener
 
 					newanswer = new Answer(text1, theanswer, new Long(i + 1),
 							"", Boolean.TRUE, null, new Float(bean
-									.getItemScore()), new Float(bean.getItemDiscount()));
+									.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 				} else {
 					newanswer = new Answer(text1, theanswer, new Long(i + 1),
 							"", Boolean.FALSE, null, new Float(bean
-									.getItemScore()), new Float(bean.getItemDiscount()));
+									.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 				}
 				answerSet1.add(newanswer);
 			}
@@ -882,7 +882,7 @@ public class ItemAddListener
 			// label is null because we don't use labels in essay questions
 			// theanswer is the model answer used as a sample for student
 			Answer modelanswer = new Answer(text1, theanswer, new Long(1),
-					null, Boolean.TRUE, null, new Float(bean.getItemScore()), new Float(bean.getItemDiscount()));
+					null, Boolean.TRUE, null, new Float(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 
 			HashSet answerFeedbackSet1 = new HashSet();
 
@@ -902,7 +902,7 @@ public class ItemAddListener
 
 			for (int i = 0; i < choices.length; i++) {
 				Answer answer1 = new Answer(text1, choices[i], new Long(i + 1),
-						null, null, null, new Float(bean.getItemScore()), new Float(bean.getItemDiscount()));
+						null, null, null, new Float(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 				answerSet1.add(answer1);
 			}
 			text1.setAnswerSet(answerSet1);
@@ -922,7 +922,7 @@ public class ItemAddListener
 				String oneanswer = (String) fibanswers[i];
 				Answer answer1 = new Answer(text1, oneanswer, new Long(i + 1),
 						null, Boolean.TRUE, null,
-						new Float(bean.getItemScore()), new Float(bean.getItemDiscount()));
+						new Float(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 				answerSet1.add(answer1);
 			}
 
@@ -942,7 +942,7 @@ public class ItemAddListener
 				String oneanswer = (String) finanswers[i];
 				Answer answer1 = new Answer(text1, oneanswer, new Long(i + 1),
 						null, Boolean.TRUE, null,
-						new Float(bean.getItemScore()), new Float(bean.getItemDiscount()));
+						new Float(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 				answerSet1.add(answer1);
 			}
 
@@ -965,12 +965,12 @@ public class ItemAddListener
 					answer = new Answer(text1,
 							stripPtags(answerbean.getText()), answerbean
 									.getSequence(), answerbean.getLabel(),
-							Boolean.TRUE, null, new Float(bean.getItemScore()), new Float(bean.getItemDiscount()));
+							Boolean.TRUE, null, new Float(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 				} else {
 					answer = new Answer(text1,
 							stripPtags(answerbean.getText()), answerbean
 									.getSequence(), answerbean.getLabel(),
-							Boolean.FALSE, null, new Float(bean.getItemScore()), new Float(bean.getItemDiscount()));
+							Boolean.FALSE, null, new Float(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 				}
 				HashSet answerFeedbackSet1 = new HashSet();
 				answerFeedbackSet1.add(new AnswerFeedback(answer,
@@ -1046,6 +1046,7 @@ public class ItemAddListener
 		  while (answerIter.hasNext()) {
 			  answer = (AnswerIfc) answerIter.next();
 			  answer.setScore(Float.valueOf(bean.getItemScore()));
+			  answer.setDiscount(Float.valueOf(bean.getItemDiscount()));
 			  if (answer.getText().equals(bean.getCorrAnswer())) {
 				  answer.setIsCorrect(Boolean.TRUE);
 			  }
@@ -1102,7 +1103,7 @@ public class ItemAddListener
 		  
 		  for (int i = 0; i < choices.length; i++) {
 			  AnswerIfc answer = new PublishedAnswer(text, choices[i], new Long(i + 1),
-					null, null, null, new Float(bean.getItemScore()), new Float(bean.getItemDiscount()));
+					null, null, null, new Float(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 			  answerSet.add(answer);
 		  }
 		  text.setAnswerSet(answerSet);
@@ -1149,7 +1150,7 @@ public class ItemAddListener
 					String oneanswer = (String) answers[j];
 					AnswerIfc answer = new PublishedAnswer(text, oneanswer,
 							new Long(j + 1), null, Boolean.TRUE, null,
-							new Float(bean.getItemScore()), new Float(bean.getItemDiscount()));
+							new Float(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 					answerSet.add(answer);
 				}
 			}
@@ -1183,6 +1184,7 @@ public class ItemAddListener
 			Iterator answerIter = answerSet.iterator();
 			while (answerIter.hasNext()) {
 				AnswerIfc answer = (AnswerIfc) answerIter.next();
+				answer.setDiscount(Float.valueOf(bean.getItemDiscount()));
 				i = answer.getSequence().intValue();
 				if (i <= newAnswersSize) {				
 					answer.setScore(Float.valueOf(bean.getItemScore()));
@@ -1218,12 +1220,12 @@ public class ItemAddListener
 					if (isCorrectChoice(bean, answerBean.getLabel().trim())) {
 						answer = new PublishedAnswer(text, oneAnswer,
 							Long.valueOf(j), oneLabel, Boolean.TRUE, null,
-							new Float(bean.getItemScore()), new Float(bean.getItemDiscount()));
+							new Float(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 					}
 					else {
 						answer = new PublishedAnswer(text, oneAnswer,
 								Long.valueOf(j), oneLabel, Boolean.FALSE, null,
-								new Float(bean.getItemScore()), new Float(bean.getItemDiscount()));
+								new Float(bean.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 					}
 					HashSet answerFeedbackSet = new HashSet();
 				    answerFeedbackSet.add(new PublishedAnswerFeedback(answer,
@@ -1301,7 +1303,7 @@ public class ItemAddListener
 										.getChoiceLabels()[matchBean
 										.getSequence().intValue() - 1],
 								Boolean.TRUE, null, new Float(bean
-										.getItemScore()), new Float(bean.getItemDiscount()));
+										.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 					} else {
 						answer = new PublishedAnswer(itemText,
 								stripPtags(matchBean.getMatch()), matchBean
@@ -1309,7 +1311,7 @@ public class ItemAddListener
 										.getChoiceLabels()[matchBean
 										.getSequence().intValue() - 1],
 								Boolean.FALSE, null, new Float(bean
-										.getItemScore()), new Float(bean.getItemDiscount()));
+										.getItemScore()), Float.valueOf(bean.getItemDiscount()));
 					}
 
 					// record answers for all combination of pairs
